--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: "Pianfan's blog"
-description: "翩帆的个人技术博客"
+name: "Allison's Notebook"
+description: "在低落的时代里，做一个昂扬的人。"
 
 avatar: https://pianfan.github.io/images/avatar.png
 favicon: https://pianfan.github.io/images/favicon.ico
