--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: "Allison's Notebook"
 description: "在低落的时代里，做一个昂扬的人。"
 
-avatar: https://pianfan.github.io/images/avatar.png
+avatar: https://allisonli0714.github.io/images/avatar01.jpg
 favicon: https://pianfan.github.io/images/favicon.ico
 
 navigation:
@@ -18,16 +18,16 @@ excerpt_separator: <!-- more -->
 
 footer-links:
   zhihu: 
-  email: xiongyunhan@outlook.com
+  email: allisonli0714@gmail.com
   facebook:
-  github: pianfan
+  github: allisonli0714
   rss: # just type anything here for a working RSS icon
   twitter: 
   youtube:
 
-footer-text: Copyright (c) 2024 Pianfan
+footer-text: Copyright (c) 2025 Allison Li
 
-url: https://pianfan.github.io
+url: https://allisonli0714.github.io
 
 permalink: /:title/
 paginate_path: /page:num/
